# gtk-works

./: README.md  browser.py  entry.py  ex2.py  ex3.py  ex4-2.py  ex4.py  example2.py  extexample.py  hello.c  packing.c  pressme.c  prog1.c  simple_example.py  table.py  try.py  window.py
gtk-foobar/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
gtk-foobar/.anjuta/session/: anjuta.session  dock-layout.xml
gtk-foobar/Debug/: Makefile  config.status  libtool
gtk-foobar/Debug/po/: Makefile  Makefile.in  POTFILES
gtk-foobar/Debug/src/: Makefile  gtk_foobar
gtk-foobar/Debug/src/.deps/: main.Po
gtk-foobar/autom4te.cache/: output.0  output.1  traces.0  traces.1
gtk-foobar/src/: Makefile.am  Makefile.in  main.cc
gtk-guitartuner/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
gtk-guitartuner/.anjuta/session/: anjuta.session  dock-layout.xml
gtk-guitartuner/Debug/: Makefile  config.h  config.status  libtool
gtk-guitartuner/Debug/po/: Makefile  Makefile.in  POTFILES
gtk-guitartuner/Debug/src/: Makefile
gtk-guitartuner/autom4te.cache/: output.0  output.1  traces.0  traces.1
gtk-guitartuner/src/: Makefile.am  Makefile.in  gtk_guitartuner.ui  main.cc  main.cc~
